--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,250 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 20px auto;
+  width: 40%;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.logo {
+  width: 100%;
+  background-color: black;
+}
+
+a {
+  text-decoration: none;
+  color: #252525;
+}
+
+.nav .inside {
+  height: 30px;
+  margin-bottom: 50px;
+}
+
+.nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  text-decoration: none;
+  width: 90%;
+  height: 100%;
+}
+
+.nav li:first-child {
+  padding-left: 0;
+}
+.nav .tag:hover {
+  color: white;
+  background-color: darkslategrey;
+}
+
+.tag-image {
+  width: 30px;
+  height: 25px;
+  border-radius: 50%;
+  margin-top: -10px;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+  padding: 10px;
+  text-decoration: none;
+}
+
+.btn-signin,
+.btn {
+  width: 100%;
+  height: 35px;
+  margin-top: 10px;
+  background-color: darkslategrey;
+  color: white;
+  border-radius: 5px;
+}
+
+.form-control {
+  width: 99%;
+  height: 35px;
+  margin-top: 10px;
+  border-radius: 5px;
+}
+
+.welcome {
+  text-align: center;
+}
+
+.card-list {
+  width: 93%;
+  padding: 5px;
+  height: 80%;
+  align-self: center;
+}
+.sub-nav {
+  display: flex;
+  align-self: center;
+  width: 90%;
+  padding: 0;
+}
+.card-list > li {
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 10px 0;
+}
+.list-image {
+  width: 100px;
+  height: 100px;
+  padding: 20px;
+  border-radius: 50%;
+}
+.content {
+  display: flex;
+}
+.right {
+  padding: 20px;
+  border-left: 1px solid black;
+}
+.right > p {
+  display: block;
+  max-width: 50%;
+  margin: 0;
+  line-height: 1.4;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.btn-poll {
+  width: 150px;
+  height: 35px;
+  margin-top: 5px;
+  color: darkslategrey;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.sub-nav li {
+  border: 1px solid black;
+  width: 50%;
+  cursor: pointer;
+}
+
+.rule {
+  border: 2px solid black;
+  width: 100%;
+}
+
+.divide {
+  display: flex;
+}
+
+.votes {
+  border-left: 1px solid black;
+  padding: 10px;
+}
+
+.votes-card {
+  width: 14rem;
+  height: 7rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-top: 10px;
+  padding: 5px;
+}
+
+progress {
+  margin: 10px 0 0 0;
+  text-align: center;
+  height: 1.5em;
+  width: 100%;
+  -webkit-appearance: none;
+  border: none;
+  position: relative;
+}
+progress:before {
+  content: attr(data-label);
+  font-size: 0.6em;
+  vertical-align: 0;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+progress::-webkit-progress-bar {
+  background-color: #c9c9c9;
+}
+progress::-webkit-progress-value {
+  background-color: #7cc4ff;
+}
+progress::-moz-progress-bar {
+  background-color: #7cc4ff;
+}
+.mid-sec {
+  padding: 0 15px;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  width: 60%;
+}
+
+.scorecard {
+  margin: 5px;
+  border: 1px solid black;
+  padding: 10px;
+  width: 10%;
+  border-radius: 5px;
+}
+
+.span-text {
+  display: flex;
+  justify-content: space-between;
+}
+
+.hr-text {
+  line-height: 1em;
+  position: relative;
+  outline: 0;
+  border: 0;
+  color: black;
+  text-align: center;
+  height: 1.5em;
+  opacity: 0.5;
+}
+.hr-text:before {
+  content: "";
+  background: linear-gradient(to right, transparent, #818078, transparent);
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  height: 1px;
+}
+.hr-text:after {
+  content: attr(data-content);
+  position: relative;
+  display: inline-block;
+  color: black;
+
+  padding: 0 0.5em;
+  line-height: 1.5em;
+  color: #818078;
+  background-color: #fcfcfa;
+}
+
+#active {
+  background-color: darkslategrey;
+  color: white;
 }
